for idaholab/Malcolm#64, more ECS work

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -74,24 +74,24 @@ zeek.ts=db:zeek.ts;kind:termfield;friendly:Timestamp;help:Zeek Timestamp
 host.name=db:host.name;group:malcolm;kind:termfield;friendly:Malcolm Node;help:Malcolm Node
 
 # basic connection information
-destination.geo.city_name=db:destination.geo.city_name;kind:termfield;friendly:Responding GeoIP City;help:Responding GeoIP City
-destination.geo.country_name=db:destination.geo.country_name;kind:termfield;friendly:Responding GeoIP Country;help:Responding GeoIP Country
-destination.hostname=db:destination.hostname;kind:termfield;friendly:Responding Host Name;help:Responding Host Name
-destination.ip_reverse_dns=db:destination.ip_reverse_dns;kind:termfield;friendly:Responding IP Reverse DNS;help:Responding IP Reverse DNS
-destination.oui=db:destination.oui;kind:termfield;friendly:Responding OUI;help:Responding OUI
-destination.segment=db:destination.segment;kind:termfield;friendly:Responding Network Segment;help:Responding Network Segment
+destination.geo.city_name=db:destination.geo.city_name;group:malcolm;kind:termfield;friendly:Responding GeoIP City;help:Responding GeoIP City
+destination.geo.country_name=db:destination.geo.country_name;group:malcolm;kind:termfield;friendly:Responding GeoIP Country;help:Responding GeoIP Country
+destination.hostname=db:destination.hostname;group:malcolm;kind:termfield;friendly:Responding Host Name;help:Responding Host Name
+destination.ip_reverse_dns=db:destination.ip_reverse_dns;group:malcolm;kind:termfield;friendly:Responding IP Reverse DNS;help:Responding IP Reverse DNS
+destination.oui=db:destination.oui;group:malcolm;kind:termfield;friendly:Responding OUI;help:Responding OUI
+destination.segment=db:destination.segment;group:malcolm;kind:termfield;friendly:Responding Network Segment;help:Responding Network Segment
 event.freq_score_v1=db:event.freq_score_v1;group:malcolm;kind:float;friendly:Freq Score v1;help:Freq Score v1
 event.freq_score_v2=db:event.freq_score_v2;group:malcolm;kind:float;friendly:Freq Score v2;help:Freq Score v2
 event.risk_score=db:event.risk_score;group:malcolm;kind:float;friendly:Risk Score;help:Risk Score
 event.risk_score_norm=db:event.risk_score_norm;group:malcolm;kind:float;friendly:Risk Score (Normalized);help:Risk Score (Normalized)
 event.severity=db:event.severity;group:malcolm;kind:integer;friendly:Severity;help:Severity
 event.severity_tags=db:event.severity_tags;group:malcolm;kind:termfield;friendly:Severity Tags;help:Severity Tags
-source.geo.city_name=db:source.geo.city_name;kind:termfield;friendly:Originating GeoIP City;help:Originating GeoIP City
-source.geo.country_name=db:source.geo.country_name;kind:termfield;friendly:Originating GeoIP Country;help:Originating GeoIP Country
-source.hostname=db:source.hostname;kind:termfield;friendly:Originating Host Name;help:Originating Host Name
-source.ip_reverse_dns=db:source.ip_reverse_dns;kind:termfield;friendly:Originating IP Reverse DNS;help:Originating IP Reverse DNS
-source.oui=db:source.oui;kind:termfield;friendly:Originating OUI;help:Originating OUI
-source.segment=db:source.segment;kind:termfield;friendly:Originating Network Segment;help:Originating Network Segment
+source.geo.city_name=db:source.geo.city_name;group:malcolm;kind:termfield;friendly:Originating GeoIP City;help:Originating GeoIP City
+source.geo.country_name=db:source.geo.country_name;group:malcolm;kind:termfield;friendly:Originating GeoIP Country;help:Originating GeoIP Country
+source.hostname=db:source.hostname;group:malcolm;kind:termfield;friendly:Originating Host Name;help:Originating Host Name
+source.ip_reverse_dns=db:source.ip_reverse_dns;group:malcolm;kind:termfield;friendly:Originating IP Reverse DNS;help:Originating IP Reverse DNS
+source.oui=db:source.oui;kind:termfield;group:malcolm;friendly:Originating OUI;help:Originating OUI
+source.segment=db:source.segment;group:malcolm;kind:termfield;friendly:Originating Network Segment;help:Originating Network Segment
 event.action=db:event.action;group:malcolm;kind:termfield;friendly:Action;help:Action
 related.password=db:related.password;group:malcolm;kind:termfield;friendly:Password;help:Password
 network.transport=db:network.transport;group:malcolm;kind:lotermfield;friendly:Protocol;help:Protocol
@@ -103,8 +103,8 @@ user_agent.original=db:user_agent.original;group:malcolm;kind:termfield;friendly
 
 # file information
 zeek.fuid=db:zeek.fuid;kind:termfield;friendly:File ID;help:File ID
-file.path=db:file.path;kind:termfield;friendly:File Name;help:File Name
-file.mime_type=db:file.mime_type;kind:termfield;friendly:File Magic;help:File Magic
+file.path=db:file.path;group:malcolm;kind:termfield;friendly:File Name;help:File Name
+file.mime_type=db:file.mime_type;group:malcolm;kind:termfield;friendly:File Magic;help:File Magic
 
 # conn.log
 # https://docs.zeek.org/en/stable/scripts/base/protocols/conn/main.zeek.html#type-Conn::Info
@@ -1036,10 +1036,10 @@ zeek.ssl.client_issuer.title=db:zeek.ssl.client_issuer.title;group:zeek_ssl;kind
 zeek.ssl.client_issuer.initials=db:zeek.ssl.client_issuer.initials;group:zeek_ssl;kind:termfield;friendly:Client Issuer Initials;help:Client Issuer Initials
 zeek.ssl.client_issuer.emailAddress=db:zeek.ssl.client_issuer.emailAddress;group:zeek_ssl;kind:termfield;friendly:Client Issuer Email Address;help:Client Issuer Email Address
 zeek.ssl.validation_status=db:zeek.ssl.validation_status;group:zeek_ssl;kind:termfield;friendly:Validation Status;help:Validation Status
-tls.client.ja3=db:tls.client.ja3;kind:termfield;friendly:JA3 Client Fingerprint;help:JA3 Client Fingerprint
-tls.server.ja3s=db:tls.server.ja3s;kind:termfield;friendly:JA3 Server Fingerprint;help:JA3 Server Fingerprint
-tls.client.ja3_description=db:tls.client.ja3_description;kind:termfield;friendly:JA3 Client Fingerprint Lookup;help:JA3 Client Fingerprint Lookup
-tls.server.ja3s_description=db:tls.server.ja3s_description;kind:termfield;friendly:JA3 Server Fingerprint Lookup;help:JA3 Server Fingerprint Lookup
+tls.client.ja3=db:tls.client.ja3;group:zeek_ssl;kind:termfield;friendly:JA3 Client Fingerprint;help:JA3 Client Fingerprint
+tls.server.ja3s=db:tls.server.ja3s;group:zeek_ssl;kind:termfield;friendly:JA3 Server Fingerprint;help:JA3 Server Fingerprint
+tls.client.ja3_description=db:tls.client.ja3_description;group:zeek_ssl;kind:termfield;friendly:JA3 Client Fingerprint Lookup;help:JA3 Client Fingerprint Lookup
+tls.server.ja3s_description=db:tls.server.ja3s_description;group:zeek_ssl;kind:termfield;friendly:JA3 Server Fingerprint Lookup;help:JA3 Server Fingerprint Lookup
 
 
 # stun.log and stun_nat.log
