for idaholab/Malcolm#64, more ECS work

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -70,6 +70,7 @@ zeek.uid=db:zeek.uid;kind:termfield;friendly:Zeek Connection ID;help:Zeek Connec
 malcolmDocId=db:malcolmDocId;group:malcolm;kind:termfield;friendly:Malcolm Log ID;help:Malcolm Log ID
 event.provider=db:event.provider;group:malcolm;kind:termfield;friendly:Malcolm Data Source;help:Malcolm Data Source
 event.dataset=db:event.dataset;group:malcolm;kind:termfield;friendly:Log Type;help:Log Type
+event.id=db:event.id;group:malcolm;kind:termfield;friendly:Log ID;help:Log ID
 zeek.ts=db:zeek.ts;kind:termfield;friendly:Timestamp;help:Zeek Timestamp
 host.name=db:host.name;group:malcolm;kind:termfield;friendly:Malcolm Node;help:Malcolm Node
 
