for idaholab/Malcolm#64, more ECS work (use event.id in dashboards)

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -104,7 +104,7 @@ user_agent.original=db:user_agent.original;group:malcolm;kind:termfield;friendly
 
 # file information
 zeek.fuid=db:zeek.fuid;kind:termfield;friendly:File ID;help:File ID
-file.path=db:file.path;group:malcolm;kind:termfield;friendly:File Name;help:File Name
+file.path=db:file.path;group:malcolm;kind:termfield;friendly:File Path;help:File Path
 file.mime_type=db:file.mime_type;group:malcolm;kind:termfield;friendly:File Magic;help:File Magic
 
 # conn.log
@@ -1162,7 +1162,6 @@ zeek.x509.basic_constraints_ca=db:zeek.x509.basic_constraints_ca;group:zeek_x509
 zeek.x509.basic_constraints_path_len=db:zeek.x509.basic_constraints_path_len;group:zeek_x509;kind:integer;friendly:Maximum Path Length;help:Maximum Path Length
 
 [custom-views]
-malcolm_file=require:session.file;title:File Transfers;fields:zeek.fuid,file.path,file.mime_type
 zeek_bacnet=require:zeek.bacnet;title:Zeek bacnet.log;fields:zeek.bacnet.bvlc_function,zeek.bacnet.pdu_type,zeek.bacnet.pdu_service,zeek.bacnet.invoke_id,zeek.bacnet.result_code
 zeek_bacnet_discovery=require:zeek.bacnet_discovery;title:Zeek bacnet_discovery.log;fields:zeek.bacnet_discovery.pdu_service,zeek.bacnet_discovery.object_type,zeek.bacnet_discovery.instance_number,zeek.bacnet_discovery.vendor,zeek.bacnet_discovery.range,zeek.bacnet_discovery.range_low,zeek.bacnet_discovery.range_high,zeek.bacnet_discovery.object_name
 zeek_bacnet_property=require:zeek.bacnet_property;title:Zeek bacnet_property.log;fields:zeek.bacnet_property.pdu_service,zeek.bacnet_property.object_type,zeek.bacnet_property.instance_number,zeek.bacnet_property.property,zeek.bacnet_property.array_index,zeek.bacnet_property.value
