for idaholab/Malcolm#64, more ECS work (use event.id in dashboards)

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -1550,6 +1550,13 @@ filter {
                add_field => { "[destination][ip]" => "%{[zeek_cols][rx_hosts][0]}" } }
     }
 
+    if ([zeek_cols][source]) and ([zeek_cols][source] !~ /^(PNG|XOR|ZIP)/) {
+      mutate { id => "mutate_add_fields_zeek_files_source_service"
+               add_field => { "[zeek_cols][service]" => "%{[zeek_cols][source]}" } }
+      mutate { id => "mutate_lowercase_zeek_files_source_service"
+               lowercase => [ "[zeek_cols][service]" ] }
+    }
+
   } else if ([log_source] == "ftp") {
     #############################################################################################################################
     # ftp.log
