for idaholab/Malcolm#64, more ECS tweaks

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -101,6 +101,8 @@ network.protocol=db:network.protocol;group:malcolm;kind:termfield;friendly:Servi
 network.protocol_version=db:network.protocol_version;group:malcolm;kind:termfield;friendly:Service Version;help:Service Version
 related.user=db:related.user;group:malcolm;kind:termfield;friendly:User;help:User
 user_agent.original=db:user_agent.original;group:malcolm;kind:termfield;friendly:User Agent;help:User Agent
+related.ip=db:related.ip;group:malcolm;kind:termfield;friendly:Related IP;help:Related IP
+related.hash=db:related.hash;group:malcolm;kind:termfield;friendly:Related Hash;help:Related Hash
 
 # file information
 zeek.fuid=db:zeek.fuid;kind:termfield;friendly:File ID;help:File ID
