--- a/logstash/pipelines/enrichment/98_make_unique.conf
+++ b/logstash/pipelines/enrichment/98_make_unique.conf
@@ -45,6 +45,17 @@ filter {
     }
   }
 
+  # event ID(s) ###############################################################
+  if ([event][id]) {
+    ruby {
+      id => "ruby_event_id_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[event][id]"
+      }
+    }
+  }
+
   # file mime type ############################################################
   if ([file][mime_type]) {
     ruby {
