--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -1550,12 +1550,6 @@ filter {
                add_field => { "[destination][ip]" => "%{[zeek_cols][rx_hosts][0]}" } }
     }
 
-    if ([zeek_cols][source]) and ([zeek_cols][source] !~ /^(PNG|XOR|ZIP)/) {
-      mutate { id => "mutate_add_fields_zeek_files_source_service"
-               add_field => { "[zeek_cols][service]" => "%{[zeek_cols][source]}" } }
-      mutate { id => "mutate_lowercase_zeek_files_source_service"
-               lowercase => [ "[zeek_cols][service]" ] }
-    }
 
   } else if ([log_source] == "ftp") {
     #############################################################################################################################
@@ -4378,6 +4372,11 @@ filter {
                                                      merge => { "[zeek][files][parent_fuid]" => "[@metadata][source_xor_fuid]" } } }
         mutate { id => "mutate_replace_zeek_files_source_xor"
                  replace => { "[zeek][files][source]" => "XOR decrypted" } }
+
+      } else if ([zeek][files][source] == "SSL") {
+        # SSL->TLS to match up with what the service field has for cross-referencing
+        mutate { id => "mutate_replace_zeek_files_source_ssl_to_tls"
+                 replace => { "[zeek][files][source]" => "TLS" } }
       }
     }
 
