--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -1011,6 +1011,20 @@ filter {
     }
   }
 
+  # if we have a network protocol as a "source" field for zeek files.log, also store in protocols
+  if ([zeek][files][source]) and
+     (![network][protocol]) and
+     ([zeek][files][source] !~ /^(<error|PNG|XOR|ZIP)/) {
+    mutate { id => "mutate_merge_zeek_files_source_network_protocol"
+             merge => { "[network][protocol]" => "[zeek][files][source]" } }
+    mutate { id => "mutate_lowercase_zeek_files_source_network_protocol"
+             lowercase => [ "[network][protocol]" ] }
+    mutate { id => "mutate_merge_zeek_files_source_application"
+             merge => { "[network][application]" => "[network][protocol]" } }
+    mutate { id => "mutate_merge_zeek_files_source_protocol"
+             merge => { "[protocol]" => "[network][protocol]" } }
+  }
+
   # User agents #######################################################################################################
   # collect all user agents under the parent (ECS) [user_agent][original] array
   if ([zeek][gquic][user_agent]) { mutate { id => "mutate_add_field_metadata_useragent_gquic"
@@ -1031,19 +1045,21 @@ filter {
   # Hashes ############################################################################################################
   # ECS - various -> related.hash (accumulate all hash/fingerprint fields into related.hash)
   if ([zeek][files][md5]) {                      mutate { id => "mutate_merge_field_related_hash_files_md5"
-                                                         merge => { "[related][hash]" => "[zeek][files][md5]" } } }
+                                                          merge => { "[related][hash]" => "[zeek][files][md5]" } } }
   if ([zeek][files][sha1]) {                     mutate { id => "mutate_merge_field_related_hash_files_sha1"
-                                                         merge => { "[related][hash]" => "[zeek][files][sha1]" } } }
+                                                          merge => { "[related][hash]" => "[zeek][files][sha1]" } } }
   if ([zeek][files][sha256]) {                   mutate { id => "mutate_merge_field_related_hash_files_sha256"
-                                                         merge => { "[related][hash]" => "[zeek][files][sha256]" } } }
+                                                          merge => { "[related][hash]" => "[zeek][files][sha256]" } } }
   if ([zeek][ssh][hassh]) {                      mutate { id => "mutate_merge_field_related_hash_ssh_hassh"
-                                                         merge => { "[related][hash]" => "[zeek][ssh][hassh]" } } }
+                                                          merge => { "[related][hash]" => "[zeek][ssh][hassh]" } } }
   if ([zeek][ssh][hasshServer]) {                mutate { id => "mutate_merge_field_related_hash_ssh_hasshServer"
-                                                         merge => { "[related][hash]" => "[zeek][ssh][hasshServer]" } } }
+                                                          merge => { "[related][hash]" => "[zeek][ssh][hasshServer]" } } }
   if ([zeek][ssl][ja3]) {                        mutate { id => "mutate_merge_field_related_hash_ssl_ja3"
-                                                         merge => { "[related][hash]" => "[zeek][ssl][ja3]" } } }
+                                                          merge => { "[related][hash]" => "[zeek][ssl][ja3]" } } }
   if ([zeek][ssl][ja3s]) {                       mutate { id => "mutate_merge_field_related_hash_zeek_ssl_ja3s"
-                                                         merge => { "[related][hash]" => "[zeek][ssl][ja3s]" } } }
+                                                          merge => { "[related][hash]" => "[zeek][ssl][ja3s]" } } }
+  if ([zeek][x509][fingerprint]) {               mutate { id => "mutate_merge_field_related_hash_zeek_x509_fingerprint"
+                                                          merge => { "[related][hash]" => "[zeek][x509][fingerprint]" } } }
 
   # IP addresses ######################################################################################################
   # ECS - various -> related.ip (all IP-type fields get rolled up into related.ip)
