for idaholab/Malcolm#64, getting close to being done with ECS tweaks

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -81,28 +81,36 @@ destination.hostname=db:destination.hostname;group:malcolm;kind:termfield;friend
 destination.ip_reverse_dns=db:destination.ip_reverse_dns;group:malcolm;kind:termfield;friendly:Responding IP Reverse DNS;help:Responding IP Reverse DNS
 destination.oui=db:destination.oui;group:malcolm;kind:termfield;friendly:Responding OUI;help:Responding OUI
 destination.segment=db:destination.segment;group:malcolm;kind:termfield;friendly:Responding Network Segment;help:Responding Network Segment
+event.action=db:event.action;group:malcolm;kind:termfield;friendly:Action;help:Action
 event.freq_score_v1=db:event.freq_score_v1;group:malcolm;kind:float;friendly:Freq Score v1;help:Freq Score v1
 event.freq_score_v2=db:event.freq_score_v2;group:malcolm;kind:float;friendly:Freq Score v2;help:Freq Score v2
+event.result=db:event.result;group:malcolm;kind:termfield;friendly:Result;help:Result
 event.risk_score=db:event.risk_score;group:malcolm;kind:float;friendly:Risk Score;help:Risk Score
 event.risk_score_norm=db:event.risk_score_norm;group:malcolm;kind:float;friendly:Risk Score (Normalized);help:Risk Score (Normalized)
 event.severity=db:event.severity;group:malcolm;kind:integer;friendly:Severity;help:Severity
 event.severity_tags=db:event.severity_tags;group:malcolm;kind:termfield;friendly:Severity Tags;help:Severity Tags
+network.inner.vlan.id=db:network.inner.vlan.id;group:malcolm;kind:lotermfield;friendly:Inner VLAN ID;help:Inner VLAN ID
+network.protocol=db:network.protocol;group:malcolm;kind:termfield;friendly:Service;help:Service
+network.protocol_version=db:network.protocol_version;group:malcolm;kind:termfield;friendly:Service Version;help:Service Version
+network.transport=db:network.transport;group:malcolm;kind:lotermfield;friendly:Protocol;help:Protocol
+network.vlan.id=db:network.vlan.id;group:malcolm;kind:lotermfield;friendly:VLAN ID;help:VLAN ID
+related.hash=db:related.hash;group:malcolm;kind:termfield;friendly:Related Hash;help:Related Hash
+related.ip=db:related.ip;group:malcolm;kind:termfield;friendly:Related IP;help:Related IP
+related.password=db:related.password;group:malcolm;kind:termfield;friendly:Password;help:Password
+related.user=db:related.user;group:malcolm;kind:termfield;friendly:User;help:User
 source.geo.city_name=db:source.geo.city_name;group:malcolm;kind:termfield;friendly:Originating GeoIP City;help:Originating GeoIP City
 source.geo.country_name=db:source.geo.country_name;group:malcolm;kind:termfield;friendly:Originating GeoIP Country;help:Originating GeoIP Country
 source.hostname=db:source.hostname;group:malcolm;kind:termfield;friendly:Originating Host Name;help:Originating Host Name
 source.ip_reverse_dns=db:source.ip_reverse_dns;group:malcolm;kind:termfield;friendly:Originating IP Reverse DNS;help:Originating IP Reverse DNS
+source.nat.ip=db:source.nat.ip;group:malcolm;kind:termfield;friendly:NAT IP;help:NAT IP
+source.nat.port=db:source.nat.port;group:malcolm;kind:integer;friendly:NAT Port;help:NAT Port
 source.oui=db:source.oui;kind:termfield;group:malcolm;friendly:Originating OUI;help:Originating OUI
 source.segment=db:source.segment;group:malcolm;kind:termfield;friendly:Originating Network Segment;help:Originating Network Segment
-event.action=db:event.action;group:malcolm;kind:termfield;friendly:Action;help:Action
-related.password=db:related.password;group:malcolm;kind:termfield;friendly:Password;help:Password
-network.transport=db:network.transport;group:malcolm;kind:lotermfield;friendly:Protocol;help:Protocol
-event.result=db:event.result;group:malcolm;kind:termfield;friendly:Result;help:Result
-network.protocol=db:network.protocol;group:malcolm;kind:termfield;friendly:Service;help:Service
-network.protocol_version=db:network.protocol_version;group:malcolm;kind:termfield;friendly:Service Version;help:Service Version
-related.user=db:related.user;group:malcolm;kind:termfield;friendly:User;help:User
 user_agent.original=db:user_agent.original;group:malcolm;kind:termfield;friendly:User Agent;help:User Agent
-related.ip=db:related.ip;group:malcolm;kind:termfield;friendly:Related IP;help:Related IP
-related.hash=db:related.hash;group:malcolm;kind:termfield;friendly:Related Hash;help:Related Hash
+vulnerability.category=db:vulnerability.category;group:malcolm;kind:termfield;friendly:Vulnerability Category;help:Vulnerability Category
+vulnerability.description=db:vulnerability.description;group:malcolm;kind:termfield;friendly:Vulnerability Description;help:Vulnerability Description
+vulnerability.reference=db:vulnerability.reference;group:malcolm;kind:termfield;friendly:Vulnerability Reference;help:Vulnerability Reference
+vulnerability.scanner.vendor=db:vulnerability.scanner.vendor;group:malcolm;kind:termfield;friendly:Vulnerability Scanner Vendor;help:Vulnerability Scanner Vendor
 
 # file information
 zeek.fuid=db:zeek.fuid;kind:termfield;friendly:File ID;help:File ID
