--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -375,6 +375,9 @@ filter {
         end"
     }
 
+    # TODO: ECS has some severity scoring stuff in https://www.elastic.co/guide/en/ecs/current/ecs-vulnerability.html, which we could look at using,
+    # but I'm not sure it's always applicable since not everything here is a "vulnerability"
+
   } # LOGSTASH_SEVERITY_SCORING env check
 
 } # filter
