--- a/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
+++ b/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
@@ -44,6 +44,8 @@ filter {
                                              merge => { "[related][ip]" => "[destination][geo][ip]" } } }
   if ([source][geo][ip]) {          mutate { id => "mutate_merge_field_related_ip_source_geo_ip"
                                              merge => { "[related][ip]" => "[source][geo][ip]" } } }
+  if ([source][nat][ip]) {          mutate { id => "mutate_merge_field_related_ip_source_nat_ip"
+                                             merge => { "[related][ip]" => "[source][nat][ip]" } } }
 
   # ecs.version is required in all events - https://www.elastic.co/guide/en/ecs/current/ecs-ecs.html
   if (![ecs][version]) { mutate { id => "mutate_add_field_ecs_version"
