--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -225,7 +225,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_conn"
-        init => "$zeek_conn_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'proto', 'service', 'duration', 'orig_bytes', 'resp_bytes', 'conn_state', 'local_orig', 'local_resp', 'missed_bytes', 'history', 'orig_pkts', 'orig_ip_bytes', 'resp_pkts', 'resp_ip_bytes', 'tunnel_parents', 'network.vlan.id', 'inner_vlan', 'orig_l2_addr', 'resp_l2_addr', 'community_id' ]"
+        init => "$zeek_conn_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'proto', 'service', 'duration', 'orig_bytes', 'resp_bytes', 'conn_state', 'local_orig', 'local_resp', 'missed_bytes', 'history', 'orig_pkts', 'orig_ip_bytes', 'resp_pkts', 'resp_ip_bytes', 'tunnel_parents', 'vlan', 'inner_vlan', 'orig_l2_addr', 'resp_l2_addr', 'community_id' ]"
         code => "event.set('[zeek_cols]', $zeek_conn_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -3954,6 +3954,9 @@ filter {
              split => { "[related][user]" => "," } }
     mutate { id => "mutate_merge_zeek_user"
              merge => { "[user]" => "[related][user]" } }
+    # TODO: ECS user, see https://www.elastic.co/guide/en/ecs/current/ecs-user.html#_field_reuse_24
+    # user field could (should?) be stored elsewhere, perhaps?
+    # note that if so, the arkime "user" field may conflict with ECS here
   }
   if ([network][transport]) {
     translate {
@@ -4009,13 +4012,15 @@ filter {
              split => { "[zeek][conn][tunnel_parents]" => "," } }
 
     if ([zeek][conn][vlan] or [zeek][conn][inner_vlan]) {
+      # ECS - zeek.conn.vlan -> network.vlan.id
       if ([zeek][conn][vlan]) {
         mutate { id => "mutate_merge_zeek_conn_vlan"
                  merge => { "[network][vlan][id]" => "[zeek][conn][vlan]" } }
       }
       if ([zeek][conn][inner_vlan]) {
+        # ECS - zeek.conn.inner_vlan -> network.inner.vlan.id
         mutate { id => "mutate_merge_zeek_conn_inner_vlan"
-                 merge => { "[network][vlan][id]" => "[zeek][conn][inner_vlan]" } }
+                 merge => { "[network][inner][vlan][id]" => "[zeek][conn][inner_vlan]" } }
       }
       ruby {
         id => "ruby_zeek_conn_vlanCnt"
@@ -4605,7 +4610,7 @@ filter {
           event.set('[url][query]', query) unless query.nil? || query.empty?
           event.set('[url][user]', Array(user).first) unless user.nil?
         "
-        # TODO: domain stuff (url.registered_domain, url.top_level_domain)
+        # TODO: ECS url domain stuff (url.registered_domain, url.top_level_domain)
         # perhaps use something like https://github.com/plutonbacon/logstash-filter-publicsuffix
       }
     }
@@ -5009,6 +5014,28 @@ filter {
                                                   add_field => { "[threat][technique][name]" => "%{[zeek][notice][sub_category]}" } } }
       if ([rule][reference])           { mutate { id => "mutate_add_field_ecs_threat_technique_reference_eternal"
                                                   add_field => { "[threat][technique][reference]" => "%{[rule][reference]}" } } }
+    }
+
+    if (([zeek][notice][category] =~ /^CVE/) or
+        ([zeek][notice][category] == "EternalSafety") or
+        ([zeek][notice][category] == "Ripple20") or
+        ([zeek][notice][category] == "Zerologon")) {
+      # ECS - zeek.notice.category -> vulnerability.* (https://www.elastic.co/guide/en/ecs/current/ecs-vulnerability.html)
+      mutate { id => "mutate_merge_ecs_vulnerability_category_notice_category"
+               merge => { "[vulnerability][category]" => "[zeek][notice][category]" } }
+      ruby {
+        id => "ruby_zeek_notice_ecs_description"
+        code => "
+          texts = Array.new
+          texts << [event.get('[zeek][notice][note]'),
+                    event.get('[zeek][notice][msg]'),
+                    event.get('[zeek][notice][sub]')].compact.join('. ')
+          event.set('[vulnerability][description]', texts)"
+      }
+      if ([rule][reference]) { mutate { id => "mutate_merge_zeek_noticed_mapped_vulnerability_reference"
+                                        merge => { "[vulnerability][reference]" => "[rule][reference]" } } }
+      if ([rule][author]) {    mutate { id => "mutate_merge_zeek_noticed_mapped_vulnerability_vendor"
+                                        merge => { "[vulnerability][scanner][vendor]" => "[rule][author]" } } }
     }
 
   } else if ([log_source] == "ntlm") {
@@ -5633,6 +5660,9 @@ filter {
       # store certificate chain fingerprints in zeek_x509.fingerprint as well for cross-reference with x509.log
       mutate { id => "mutate_merge_zeek_ssl_cert_chain_fps"
                merge => { "[zeek][x509][fingerprint]" => "[zeek][ssl][cert_chain_fps]" } }
+      # TODO: zeek.ssl.*cert_chain_fps to:
+      #       https://www.elastic.co/guide/en/ecs/current/ecs-tls.html#field-tls-client-hash-md5 (or sha1, sha256, etc.)
+      #       https://www.elastic.co/guide/en/ecs/current/ecs-tls.html#field-tls-server-hash-md5 (or sha1, sha256, etc.)
     }
 
     if ([zeek][ssl][client_cert_chain_fps]) {
@@ -5712,6 +5742,18 @@ filter {
     # ECS - zeek.ssl.subject_full -> tls.server.subject
     if ([zeek][ssl][subject_full]) {         mutate { id => "mutate_add_field_ecs_zeek_tls_subject_full"
                                                      add_field => { "[tls][server][subject]" => "%{[zeek][ssl][subject_full]}" } } }
+
+  } else if ([log_source] == "stun_nat") {
+    #############################################################################################################################
+    # stun_nat.log specific logic
+
+    # ECS - zeek.stun_nat.wan_addr -> source.nat.ip
+    if ([zeek][stun_nat][wan_addr]) {    mutate { id => "mutate_add_field_ecs_zeek_stun_nat_wan_addr"
+                                                  add_field => { "[source][nat][ip]" => "%{[zeek][stun_nat][wan_addr]}" } } }
+
+    # ECS - zeek.stun_nat.wan_port -> source.nat.port
+    if ([zeek][stun_nat][wan_port]) {    mutate { id => "mutate_add_field_ecs_zeek_stun_nat_wan_port"
+                                                  add_field => { "[source][nat][port]" => "%{[zeek][stun_nat][wan_port]}" } } }
 
   } else if ([log_source] == "tds_rpc") {
     #############################################################################################################################
@@ -5861,6 +5903,10 @@ filter {
 
     if ([zeek][x509][fingerprint]) { mutate { id => "mutate_split_zeek_x509_fingerprint"
                                              split => { "[zeek][x509][fingerprint]" => "," } } }
+
+    # TODO: ECS TLS/X509 nestings?
+    # - https://www.elastic.co/guide/en/ecs/current/ecs-tls.html#ecs-tls-nestings
+    # - https://www.elastic.co/guide/en/ecs/current/ecs-x509.html#_field_reuse_27
 
   } # end if/else if/else for specific log type logic
   #######################################################################################################
