--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -1026,21 +1026,16 @@ filter {
   }
 
   # User agents #######################################################################################################
-  # collect all user agents under the parent (ECS) [user_agent][original] array
-  if ([zeek][gquic][user_agent]) { mutate { id => "mutate_add_field_metadata_useragent_gquic"
-                                           add_field => { "[@metadata][generic_user_agent]" => "%{[zeek][gquic][user_agent]}" } } }
-  if ([zeek][http][user_agent]) {  mutate { id => "mutate_add_field_metadata_useragent_http"
-                                           add_field => { "[@metadata][generic_user_agent]" => "%{[zeek][http][user_agent]}" } } }
-  if ([zeek][sip][user_agent]) {   mutate { id => "mutate_add_field_metadata_useragent_sip"
-                                           add_field => { "[@metadata][generic_user_agent]" => "%{[zeek][sip][user_agent]}" } } }
-  if ([zeek][smtp][user_agent]) {  mutate { id => "mutate_add_field_metadata_useragent_smtp"
-                                           add_field => { "[@metadata][generic_user_agent]" => "%{[zeek][smtp][user_agent]}" } } }
   # ECS -> various -> user_agent.original (https://www.elastic.co/guide/en/ecs/current/ecs-user_agent.html)
   #     - TODO: potentially more parsing could be done for user agent strings (.name, .device.name, .version)
-  if ([@metadata][generic_user_agent]) {
-    mutate { id => "mutate_add_field_user_agent_ecs"
-             add_field => { "[user_agent][original]" => "%{[@metadata][generic_user_agent]}" } }
-  }
+  if ([zeek][gquic][user_agent]) { mutate { id => "mutate_merge_ecs_useragent_gquic"
+                                            merge => { "[user_agent][original]" => "[zeek][gquic][user_agent]" } } }
+  if ([zeek][http][user_agent]) {  mutate { id => "mutate_merge_ecs_useragent_http"
+                                            merge => { "[user_agent][original]" => "[zeek][http][user_agent]" } } }
+  if ([zeek][sip][user_agent]) {   mutate { id => "mutate_merge_ecs_useragent_sip"
+                                            merge => { "[user_agent][original]" => "[zeek][sip][user_agent]" } } }
+  if ([zeek][smtp][user_agent]) {  mutate { id => "mutate_merge_ecs_useragent_smtp"
+                                            merge => { "[user_agent][original]" => "[zeek][smtp][user_agent]" } } }
 
   # Hashes ############################################################################################################
   # ECS - various -> related.hash (accumulate all hash/fingerprint fields into related.hash)
@@ -1089,6 +1084,8 @@ filter {
                                                         merge => { "[related][ip]" => "[zeek][socks][bound_host]" } } }
   if ([zeek][socks][request_host]) {            mutate { id => "mutate_merge_field_related_ip_zeek_socks_request_host"
                                                         merge => { "[related][ip]" => "[zeek][socks][request_host]" } } }
-  if ([zeek][x509][san_ip]) {                   mutate { id => "mutate_merge_field_related_ip_zeek_x509_san_ip"
-                                                        merge => { "[related][ip]" => "[zeek][x509][san_ip]" } } }
+  if ([zeek][stun_nat][wan_addr]) {             mutate { id => "mutate_merge_field_related_ip_zeek_stun_nat_wan_addr"
+                                                        merge => { "[related][ip]" => "[zeek][stun_nat][wan_addr]" } } }
+  if ([zeek][stun_nat][lan_addr]) {             mutate { id => "mutate_merge_field_related_ip_zeek_stun_nat_lan_addr"
+                                                        merge => { "[related][ip]" => "[zeek][stun_nat][lan_addr]" } } }
 }
