--- a/.github/workflows/malcolm-iso-build-docker-wrap-push-ghcr.yml
+++ b/.github/workflows/malcolm-iso-build-docker-wrap-push-ghcr.yml
@@ -86,9 +86,12 @@ jobs:
       -
         name: Build image
         run: |
-          IMAGES=( $(grep image: docker-compose.yml | awk '{print $2}' | sed "s@^\(malcolmnetsec\)@ghcr.io/${{ github.repository_owner }}/\1@" | sed "s/:.*/:${{ steps.extract_branch.outputs.branch }}/") )
+          IMAGES=( $(grep image: docker-compose.yml | awk '{print $2}') )
           for IMAGE in "${IMAGES[@]}"; do
-            docker pull "$IMAGE"
+            REPO_IMAGE="$(echo "$IMAGE" | sed "s@^\(malcolmnetsec\)@ghcr.io/${{ github.repository_owner }}/\1@" | sed "s/:.*/:${{ steps.extract_branch.outputs.branch }}/")"
+            docker pull "$REPO_IMAGE" && \
+              docker tag "$REPO_IMAGE" "$IMAGE" && \
+              docker rmi "$REPO_IMAGE"
           done
           DEST_IMAGES_TGZ=$(pwd)/malcolm_"$(date +%Y.%m.%d_%H:%M:%S)"_${{ steps.extract_short_hash.outputs.hash }}_images.tar.gz
           docker save "${IMAGES[@]}" | gzip > "$DEST_IMAGES_TGZ"
