--- a/.github/workflows/dashboards-helper-build-and-push-ghcr.yml
+++ b/.github/workflows/dashboards-helper-build-and-push-ghcr.yml
@@ -1,13 +1,14 @@
-name: kibana-build-and-push-ghcr
+name: dashboards-helper-build-and-push-ghcr
 
 on:
   push:
     branches:
       - main
       - development
+      - opensearch
     paths:
-      - 'kibana/**'
-      - 'Dockerfiles/kibana.Dockerfile'
+      - 'dashboards/**'
+      - 'Dockerfiles/dashboards-helper.Dockerfile'
       - 'shared/bin/*'
   workflow_dispatch:
   repository_dispatch:
@@ -53,6 +54,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfiles/kibana.Dockerfile
+          file: ./Dockerfiles/dashboards-helper.Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/malcolmnetsec/kibana-od:${{ steps.extract_branch.outputs.branch }}
+          tags: ghcr.io/${{ github.repository_owner }}/malcolmnetsec/dashboards-helper:${{ steps.extract_branch.outputs.branch }}
